[gd_scene load_steps=2 format=3 uid="uid://bwl8xaexlmh1c"]

[ext_resource type="Script" path="res://Utility/attack.gd" id="1_tbh8l"]

[node name="AttackBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_tbh8l")

[node name="HitCollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableHitBoxTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableHitBoxTimer" to="." method="_on_disable_hit_box_timer_timeout"]
